--- a/Estatística_com_python.ipynb
+++ b/Estatística_com_python.ipynb
@@ -16,7 +16,7 @@
         "id": "WvMflodMjQKe"
       },
       "source": [
-        "# <font color=green size=10>CURSO DE ESTATÍSTICA - PARTE 4</font>\n",
+        "# <font color=green size=10>ESTATÍSTICA COM PYTHON </font>\n",
         "***"
       ]
     },
